Revision history HTML::Lint and Test::HTML::Lint.

NOTE: All bugs and requests are now being handled through GitHub.

    https://github.com/petdance/html-lint/issues

Please DO NOT send bug reports to http://rt.cpan.org/.


2.27_01 Fri Dec 22 15:54:32 CST 2017
    [ENHANCEMENTS]
    Adds checking of entities in attributes, not just text.  Thanks,
    Klaus S. Madsen.

    [FIXES]
    Calling ->parsefile() would generate an error.  Thanks, Shlomi
    Fish. (GH#58)

    [INTERNALS]
    Prepare for perl 5.26.0 which removes '.' from @INC.  Thanks,
    Jim Keenan.

    Fix disttest target.  Thanks, Shlomi Fish.


2.26    Thu Dec 29 22:36:54 CST 2016
    Stable release.  No changes from previous release.


2.25_02 Tue Dec 27 14:34:22 CST 2016
    [FIXES]
    html_fragment_ok() was not properly excluding document-level errors.
    It was effectively the same as html_ok().


2.25_01 Fri Dec 23 22:36:17 CST 2016
    [ENHANCEMENTS]
    Added two new types of errors to let you know you're using the
    API incorrectly.  You should be parsing files like this:

        my $lint = HTML::Lint->new;
        $lint->newfile( $filename );
        $lint->parse( $line );
        $lint->eof();
        my @errors = $lint->errors();

    If you neglect to call ->parse or ->eof, you'll get an error returned
    in the list of errors from ->errors().

    [FIXES]
    Test::HTML::Lint::html_fragment_ok() was not properly calling ->eof.


2.24    Wed Dec  7 22:20:13 CST 2016
    Official release.  No changes from 2.23_01.


2.23_01 Tue Dec  6 22:48:56 CST 2016
    [ENHANCEMENTS]
    Added detection of unknown HTML entities, like "known &unclosed
    &entities are not found".  Also fixes the case where HTML::Lint
    gets confused by an entity like "&sup2;" which it thought was an
    unterminated "&sup;" entity.  Thanks, Klaus S. Madsen.

    [FIXES]
    Errors of the type doc-tag-required did not come out in any defined
    order.  They are now sorted by tag name.  This was discovered