@@ -9,7 +9,7 @@ use Test::HTML::Lint;
 my $chunk = '<html><head></head><body><title>A fine chunk of code</title></body></html>';
 
 TODO: { # undef should fail
-    local $TODO = "This test should NOT succeed";
+    local $TODO = 'This test should NOT succeed';
     html_ok( undef );
 }
 html_ok( $chunk );
